--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -30,34 +33,34 @@
                 <th>П'ятниця</th>
             </tr>
         </thead>
-        <tbody>
+        <tbody class="list">
             <tr>
-                <td>Історія</td>
-                <td>Фізкультура</td>
-                <td>Інформатика</td>
-                <td>Правознавство</td>
-                <td>Математика</td>
+                <td class="list-item">Історія</td>
+                <td class="list-item">Фізкультура</td>
+                <td class="list-item">Інформатика</td>
+                <td class="list-item">Правознавство</td>
+                <td class="list-item">Математика</td>
             </tr>
             <tr>
-                <td>Фізика</td>
-                <td>Англійська</td>
-                <td>Фізкультура</td>
-                <td>Екологія</td>
-                <td>Історія</td>
+                <td class="list-item">Фізика</td>
+                <td class="list-item">Англійська</td>
+                <td class="list-item">Фізкультура</td>
+                <td class="list-item">Екологія</td>
+                <td class="list-item">Історія</td>
             </tr>
             <tr>
-                <td>Українська</td>
-                <td>Хімія</td>
-                <td>Математика</td>
-                <td>Правознавство</td>
-                <td>Фізика</td>
+                <td class="list-item">Українська</td>
+                <td class="list-item">Хімія</td>
+                <td class="list-item">Математика</td>
+                <td class="list-item">Правознавство</td>
+                <td class="list-item">Фізика</td>
             </tr>
             <tr>
-                <td>Інформатика</td>
-                <td>Англійська</td>
-                <td>Фізика</td>
-                <td>Хімія</td>
-                <td>Фізкультура</td>
+                <td class="list-item">Інформатика</td>
+                <td class="list-item">Англійська</td>
+                <td class="list-item">Фізика</td>
+                <td class="list-item">Хімія</td>
+                <td class="list-item">Фізкультура</td>
             </tr>
         </tbody>
     </table>
