--- a/index.html
+++ b/index.html
@@ -33,34 +33,34 @@
                 <th>П'ятниця</th>
             </tr>
         </thead>
-        <tbody class="list">
+        <tbody>
             <tr>
-                <td class="list-item">Історія</td>
-                <td class="list-item">Фізкультура</td>
-                <td class="list-item">Інформатика</td>
-                <td class="list-item">Правознавство</td>
-                <td class="list-item">Математика</td>
+                <td>Історія</td>
+                <td>Фізкультура</td>
+                <td>Інформатика</td>
+                <td>Правознавство</td>
+                <td>Математика</td>
             </tr>
             <tr>
-                <td class="list-item">Фізика</td>
-                <td class="list-item">Англійська</td>
-                <td class="list-item">Фізкультура</td>
-                <td class="list-item">Екологія</td>
-                <td class="list-item">Історія</td>
+                <td>Фізика</td>
+                <td>Англійська</td>
+                <td>Фізкультура</td>
+                <td>Екологія</td>
+                <td>Історія</td>
             </tr>
             <tr>
-                <td class="list-item">Українська</td>
-                <td class="list-item">Хімія</td>
-                <td class="list-item">Математика</td>
-                <td class="list-item">Правознавство</td>
-                <td class="list-item">Фізика</td>
+                <td>Українська</td>
+                <td>Хімія</td>
+                <td>Математика</td>
+                <td>Правознавство</td>
+                <td>Фізика</td>
             </tr>
             <tr>
-                <td class="list-item">Інформатика</td>
-                <td class="list-item">Англійська</td>
-                <td class="list-item">Фізика</td>
-                <td class="list-item">Хімія</td>
-                <td class="list-item">Фізкультура</td>
+                <td>Інформатика</td>
+                <td>Англійська</td>
+                <td>Фізика</td>
+                <td>Хімія</td>
+                <td>Фізкультура</td>
             </tr>
         </tbody>
     </table>
